Unreviewed, follow-up after r252642 https://bugs.webkit.org/show_bug.cgi?id=204346

* Modules/indexeddb/IDBActiveDOMObject.h:
* Modules/indexeddb/client/TransactionOperation.h:
(WebCore::IDBClient::TransactionOperation::~TransactionOperation):
(WebCore::IDBClient::TransactionOperation::perform):
(WebCore::IDBClient::TransactionOperation::transitionToCompleteOnThisThread):
(WebCore::IDBClient::TransactionOperation::transitionToComplete):
(WebCore::IDBClient::TransactionOperation::doComplete):
* platform/Supplementable.h:
(WebCore::Supplementable::provideSupplement):
(WebCore::Supplementable::removeSupplement):
(WebCore::Supplementable::requireSupplement):
* platform/Timer.cpp:
(WebCore::TimerBase::~TimerBase):
(WebCore::TimerBase::start):
(WebCore::TimerBase::stop):
(WebCore::TimerBase::setNextFireTime):

Canonical link: https://commits.webkit.org/217643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252651 268f45cc-cd09-0410-ab3c-d52691b4dbfc